--- a/Profil.css
+++ b/Profil.css
@@ -137,5 +137,6 @@ text-align: center;
   .profilinfos{background-color:#BCBABE; 
     
 }
-.speicherbutton{text-align: right;
+.profilrechts{text-align: right;
+  
 }
