--- a/Django-Projekt/meine_app/templates/meine_app/edit_profile.html
+++ b/Django-Projekt/meine_app/templates/meine_app/edit_profile.html
@@ -8,6 +8,18 @@
   <link rel="stylesheet" href="{% static 'css/style.css' %}">
   <script src="https://kit.fontawesome.com/a7fef2ebcc.js" crossorigin="anonymous"></script>
   <style> 
+
+  .post-image {
+  
+    max-width: 640px;
+    max-width: 480px;
+    height: auto;
+    border-radius: 8px;
+    display: block;
+    margin: 8px;
+  }
+
+
   .footer-buttons {
       position: fixed;
       bottom: 1rem;
