--- a/Django-Projekt/meine_app/templates/meine_app/freunde.html
+++ b/Django-Projekt/meine_app/templates/meine_app/freunde.html
@@ -8,6 +8,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link rel="stylesheet" href="{% static 'css/style.css' %}">
   <link rel="stylesheet" href="{% static 'css/freunde.css' %}">
+  <link rel="stylesheet" href="{% static 'css/handy.css' %}">
   <script src="https://kit.fontawesome.com/a7fef2ebcc.js" crossorigin="anonymous"></script>
 </head>
 
